--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script>
         // --- API KEY CONFIGURATION ---
         // LINE 120: PASTE YOUR API KEY BETWEEN THE QUOTES BELOW
-        const apiKey = ""; 
+        const apiKey = "AIzaSyB0AfKg4I4lWNejKAnbFD4381WjwfVHZp4"; 
 
         async function sendToAI() {
             const input = document.getElementById('prompt-input');
